--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   "license": "MIT",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rm -rf dist && tsc",
+    "start": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": "cross-env NODE_ENV=development nodemon",
+    "start:debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
     "start:prod": "node dist/main.js",
-    "start:hmr": "node dist/server",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "clear_jest": "jest --clearCache",
+    "test": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --verbose --detectOpenHandles --forceExit",
+    "test:cov": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --coverage --detectOpenHandles --forceExit",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "webpack": "webpack --config webpack.config.js",
     "ts-typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
     "migration:create": "typeorm migration:create -d src/migrations",
@@ -24,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.6",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
@@ -32,14 +31,16 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
-    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.30",
+    "typeorm-extension": "^1.1.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
