--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,14 +8,9 @@ image: node:lts-alpine
 definitions:
   services:
     mysql:
-      image: mysql:8
-      command: --default-authentication-plugin=mysql_native_password
-      ports:
-        - 3306:3306
-      volumes:
-        - mysql-data:/var/lib/mysql
+      image: bondas83/mysql-native-password
       environment:
-        - MYSQL_ROOT_PASSWORD=rnssolution@1234
+        MYSQL_ROOT_PASSWORD: 'rnssolution@1234'
 
 pipelines:
   pull-requests:
