feature: /genesis_user API was added

--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "country-state-city": "^3.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "libphonenumber-js": "^1.9.48",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
