--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
+    "ccxt": "^1.73.17",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "country-state-city": "^3.0.1",
