--- a/_test.env
+++ b/_test.env
@@ -9,10 +9,10 @@ JWT_SECRET_KEY=uAsBw6WxqD
 JWT_EXPIRATION_TIME=3600
 
 # DATABASE
-DB_TYPE=mysql
-DB_USERNAME=root
-DB_PASSWORD=rnssolution@1234
+DB_TYPE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=12345678
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=test
 DB_SYNC=true
