Registration with referral system,forgot password api's,login apis updated
test case for referral registration was added

test env updated

test helper class updation

--- a/_test.env
+++ b/_test.env
@@ -2,7 +2,7 @@
 APP_PORT=4001
 APP_ENV=dev
 APP_URL=https://BinancePlus.com/
-APP_NAME=FINLIT
+APP_NAME=BinancePlus
 
 # JWT AUTH
 JWT_SECRET_KEY=uAsBw6WxqD
