--- a/_test.env
+++ b/_test.env
@@ -6,7 +6,7 @@ APP_NAME=BinancePlus
 
 # JWT AUTH
 JWT_SECRET_KEY=uAsBw6WxqD
-JWT_EXPIRATION_TIME=3600
+JWT_EXPIRATION_TIME=1h
 
 # DATABASE
 DB_TYPE=postgres
