--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,31 @@
 version: "2"
 services:
+  postgres:
+    image: 'postgres'
+    volumes:
+      - postgres-data:/var/lib/postgresql/data/
+    container_name: 'finlit-db'
+    restart: 'always'
+    env_file:
+      - _database.env
+    ports:
+      - '5432:5432'
+    networks:
+      - binance_plus
+
   binance_plus-backend:
     build: .
     image: binance_plus-backend:latest
     container_name: binance_plus-backend
     depends_on:
-      - mysql
+      - postgres
     volumes:
       - ./src:/app/src
       - .env:/app/.env
-
-  mysql:
-    image: mysql:8
-    command: --default-authentication-plugin=mysql_native_password
-    container_name: mysql
-    ports:
-      - 3306:3306
-    environment:
-      - MYSQL_ROOT_PASSWORD=rnssolution@1234
-      - MYSQL_PASSWORD=rnssolution@1234
-      - MYSQL_USER=Binance+
-      - MYSQL_DATABASE=Binance+
-    volumes:
-      - mysql-data:/var/lib/mysql 
-             
+    networks:
+      - binance_plus
+      
+networks:
+  binance_plus:             
 volumes:
-  mysql-data:
+  postgres-data:
