--- a/package.json
+++ b/package.json
@@ -29,21 +29,27 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
     "ccxt": "^1.73.17",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "coingecko-api-v3": "^0.0.13",
     "country-state-city": "^3.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "js-big-decimal": "^1.3.4",
     "libphonenumber-js": "^1.9.48",
+    "moment": "^2.29.1",
+    "nestjs-typeorm-paginate": "^3.1.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
+    "short-unique-id": "^4.4.4",
     "typeorm": "^0.2.30",
     "typeorm-extension": "^1.1.0",
     "typescript": "^4.4.2"
@@ -51,6 +57,7 @@
   "devDependencies": {
     "@nestjs/testing": "^8.0.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^1.7.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.17.5",
     "@types/supertest": "^2.0.11",
