password iisue resolved, username issue resolved, forgot password token time configured seperately

--- a/_test.env
+++ b/_test.env
@@ -7,6 +7,7 @@ APP_NAME=BinancePlus
 # JWT AUTH
 JWT_SECRET_KEY=uAsBw6WxqD
 JWT_EXPIRATION_TIME=1h
+JWT_TIME_FORGOT_PASSWORD=30m
 
 # DATABASE
 DB_TYPE=postgres
