--- a/_test.env
+++ b/_test.env
@@ -1,7 +1,7 @@
 # APP
 APP_PORT=4001
 APP_ENV=dev
-APP_URL=https://BinancePlus.com/
+APP_URL=https://dev-binanceplus.rnssol.com/
 APP_NAME=BinancePlus
 
 # JWT AUTH
