--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
-    "ccxt": "^1.73.17",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "coingecko-api-v3": "^0.0.13",
     "country-state-city": "^3.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "js-big-decimal": "^1.3.4",
     "libphonenumber-js": "^1.9.48",
     "moment": "^2.29.1",
