--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: 'postgres'
     volumes:
       - postgres-data:/var/lib/postgresql/data/
-    container_name: 'finlit-db'
+    container_name: 'binanceplus-db'
     restart: 'always'
     env_file:
       - _database.env
