--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
+    "caver-js": "^1.8.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "coingecko-api-v3": "^0.0.13",
@@ -41,6 +42,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "js-big-decimal": "^1.3.4",
+    "level-ts": "^2.1.0",
     "libphonenumber-js": "^1.9.48",
     "moment": "^2.29.1",
     "nestjs-typeorm-paginate": "^3.1.3",
@@ -48,6 +50,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
     "short-unique-id": "^4.4.4",
     "typeorm": "^0.2.30",
