--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
     "caver-js": "^1.8.0",
+    "ccxt": "^1.76.31",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "coingecko-api-v3": "^0.0.13",
