Basic Telegram Bot was added with replying functions, MLM distribution scheme updated

--- a/_test.env
+++ b/_test.env
@@ -20,3 +20,7 @@ DB_SYNC=true
 
 KLAYTN_NODE_URL=https://api.baobab.klaytn.net:8651/
 KEY_STORE_PATH=./test_database
+
+BOT_TOKEN=5060344605:AAHuBFdqTZzKg_avhYCRP6DkZrJSXFFAqa4
+TELEGRAM_BOT_API=https://api.telegram.org/bot5060344605:AAHuBFdqTZzKg_avhYCRP6DkZrJSXFFAqa4
+SERVER_URL=https://5c85-143-244-44-162.ngrok.io
