--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "libphonenumber-js": "^1.9.48",
     "moment": "^2.29.1",
     "nestjs-typeorm-paginate": "^3.1.3",
+    "otp-generator": "^4.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
@@ -64,6 +65,7 @@
     "@types/cron": "^1.7.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.17.5",
+    "@types/otp-generator": "^4.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
