--- a/_test.env
+++ b/_test.env
@@ -29,7 +29,7 @@ TELEGRAM_BOT_API=https://api.telegram.org/bot5060344605:AAHuBFdqTZzKg_avhYCRP6Dk
 SERVER_URL=https://5c85-143-244-44-162.ngrok.io
 
 KLAYTN_NODE_URL=https://api.baobab.klaytn.net:8651/
-KLAYTN_NODE_WS=wss://api.baobab.klaytn.net:8652/
+KLAYTN_NODE_WS=ws://localhost:1234
 KEY_STORE_PATH=./test_database
 
 KLAY_MASTER_WALLET_ADDRESS=0x9602DD481bCE7529D40e0C4173c0108e3d474f1E
