--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "delay": "^5.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
+    "jest-websocket-mock": "^2.3.0",
     "js-big-decimal": "^1.3.4",
-    "level-ts": "^2.1.0",
+    "level": "^8.0.0",
     "libphonenumber-js": "^1.9.48",
     "moment": "^2.29.1",
     "nestjs-typeorm-paginate": "^3.1.3",
