Affiliate Api updated , Distribution in parents applied, test case updated, binance cred api updated, current user api added

--- a/_test.env
+++ b/_test.env
@@ -18,6 +18,11 @@ DB_PORT=5432
 DB_DATABASE=test
 DB_SYNC=true
 
+# Crypto Encryption/Decrytpion
+ENC_ALGORITHM=aes-192-cbc
+ENC_SECRETPASS=a1xpnm54ty45!34%678#e$!4
+ENC_IV=a1xpnm54ty45!34%
+
 KEY_STORE_PATH=./test_database
 OTP_KEY=rnssols
 
