docker file was updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,19 @@ services:
       - '3836:3836'
     networks:
       - binance_plus
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes: 
+      - cache:/data
+    networks:
+      - binance_plus    
       
 networks:
   binance_plus:             
 volumes:
   postgres-data:
+  cache:
