bot tables queries updation
test env updated

--- a/_test.env
+++ b/_test.env
@@ -13,9 +13,11 @@ JWT_TIME_FORGOT_PASSWORD=30m
 DB_TYPE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=12345678
-DB_HOST=127.0.0.1
-DB_PORT=5432
+#DB_HOST=127.0.0.1
+#DB_PORT=5432
 DB_DATABASE=test
+DB_HOST=58.65.160.225
+DB_PORT=5433
 DB_SYNC=true
 
 # Crypto Encryption/Decrytpion
@@ -23,7 +25,10 @@ ENC_ALGORITHM=aes-192-cbc
 ENC_SECRETPASS=a1xpnm54ty45!34%678#e$!4
 ENC_IV=a1xpnm54ty45!34%
 
+# Wallet KeyStore PAth
 KEY_STORE_PATH=./test_database
+
+# speakeasy key
 OTP_KEY=rnssols
 
 REDIS_PORT=6379
