Preformance fee payment creation was added

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.4.4",
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
     "botclient": "^0.0.6",
@@ -62,6 +64,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
     "short-unique-id": "^4.4.4",
+    "socket.io": "^4.4.1",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.2.30",
     "typeorm-extension": "^1.1.0",
