--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.4.4",
     "@types/express": "^4.17.13",
+    "@types/pdfkit": "^0.12.4",
     "bcrypt": "^5.0.1",
     "botclient": "^0.0.6",
     "caver-js": "^1.8.0",
@@ -58,6 +59,7 @@
     "otp-generator": "^4.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pdfkit-table": "^0.1.86",
     "pg": "^8.7.3",
     "redis-server": "^1.2.2",
     "reflect-metadata": "^0.1.13",
@@ -77,7 +79,7 @@
     "@types/bull": "^3.15.8",
     "@types/cron": "^1.7.3",
     "@types/jest": "^27.0.1",
-    "@types/node": "^14.17.5",
+    "@types/node": "^14.18.15",
     "@types/otp-generator": "^4.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
