env files was updated

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,54 @@
 # APP
+APP_PORT=your-port
 APP_ENV=dev
-APP_URL=http://localhost
+APP_URL=https://your-binanceplus-app.com/
+APP_NAME=binanceplus
 
 # JWT AUTH
-JWT_SECRET_KEY=uAsBw6WxqD
-JWT_EXPIRATION_TIME=3600
+JWT_SECRET_KEY=your_secret
+JWT_EXPIRATION_TIME=8h
+JWT_TIME_FORGOT_PASSWORD=30m
 
 # DATABASE
-DB_TYPE=mariadb
-DB_USERNAME=nest
-DB_PASSWORD=nest
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=nest
-DB_SYNC=false
+DB_TYPE=db_type
+DB_USERNAME=db_name
+DB_PASSWORD=your_password
+DB_HOST=db_host
+DB_PORT=db_port
+DB_DATABASE=db_name
+DB_SYNC=true
+
+# Crypto Encryption/Decrytpion
+ENC_ALGORITHM=npm-crypto-algorithm
+ENC_SECRETPASS=npm-crypto-secert
+ENC_IV=npm-crypto-iv
+
+KEY_STORE_PATH=./your_key_store_path
+
+OTP_KEY=your_otp_key
+
+REDIS_PORT=redis_port
+REDIS_HOST=redis_host
+REDIS_PASSWORD=redis_password
+
+KLAYTN_NODE_URL=https://api.baobab.klaytn.net:8651/
+KLAYTN_NODE_WS=wss://api.baobab.klaytn.net:8652/
+ENABLE_RECOVERY=false
+
+BOT_TOKEN=your_bot_token
+TELEGRAM_BOT_API=https://api.telegram.org/bot{your_bot_token}
+SERVER_URL=your_server_url
+
+KLAY_MASTER_WALLET_ADDRESS=master-klay-wallet-address
+KLAY_MASTER_WALLET_SECRET=master-klay-wallet-secret
+
+KLAY_FEE_WALLET_ADDRESS=fee-klay-wallet-address
+KLAY_FEE_WALLET_SECRET=fee-klay-wallet-address
+
+#Trading Bot Server
+BINANCE_BOT_ADDRESS=https://your-bot-server-url/
+
+EXCHANGE=exchange-name
+
+#Transfer Klay to user wallet
+KLAY_TRANSFER_AT=10
