--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "cross-env NODE_ENV=development nodemon",
     "start:debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
+    "prestart:prod": "rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
+    "start:hmr": "node dist/server",
     "clear_jest": "jest --clearCache",
     "test": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --verbose --detectOpenHandles --forceExit",
     "test:cov": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --coverage --detectOpenHandles --forceExit",
