gcp secret service applied for security

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,14 @@ EXCHANGE=exchange-name
 
 #Transfer Klay to user wallet
 KLAY_TRANSFER_AT=10
+
+#Gcp Project Id
+GCP_PROJECT_ID=GCP project id
+
+#Gcp Key Store Path
+GCP_KEY_PATH=path to json key file
+
+
+#Gcp Secret Resource Id's
+GCP_FEE_WALLET_SECRET=projects/${project-name}/secrets/${secret-id}/versions/latest
+GCP_MASTER_WALLET_SECRET=projects/${project-name}/secrets/${secret-id}/versions/latest
