--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "migration:revert": "yarn ts-typeorm migration:revert"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^3.12.0",
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/bull": "^0.5.3",
     "@nestjs/common": "^8.0.6",
