domain name changes in jenkins , docker and code messages

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # APP
 APP_PORT=your-port
 APP_ENV=dev
-APP_URL=https://your-binanceplus-app.com/
-APP_NAME=binanceplus
+APP_URL=https://your-trade4u-app.com/
+APP_NAME=trade4u
 
 # JWT AUTH
 JWT_SECRET_KEY=your_secret
