--- a/_test.env
+++ b/_test.env
@@ -1,8 +1,8 @@
 # APP
 APP_PORT=4001
 APP_ENV=dev
-APP_URL=https://dev-binanceplus.rnssol.com/
-APP_NAME=BinancePlus
+APP_URL=https://dev-trade4u.rnssol.com/
+APP_NAME=Trade4u
 
 # JWT AUTH
 JWT_SECRET_KEY=test_secret
