feature: Elastic search was added for logging

--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,9 @@ GCP_PROJECT_ID=GCP project id
 #Gcp Key Store Path
 GCP_KEY_PATH=path to json key file
 
-
 #Gcp Secret Resource Id's
 GCP_FEE_WALLET_SECRET=projects/${project-name}/secrets/${secret-id}/versions/latest
 GCP_MASTER_WALLET_SECRET=projects/${project-name}/secrets/${secret-id}/versions/latest
+
+#Elastic Search Node
+ELASTIC_SEARCH_NODE=http://localhost:9200/
