--- a/_test.env
+++ b/_test.env
@@ -55,3 +55,6 @@ EXCHANGE=STABLE
 
 #Transfer Klay to user wallet
 KLAY_TRANSFER_AT=10
+
+#Elastic Search node
+ELASTIC_SEARCH_NODE=http://localhost:9200/
