--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "level": "^8.0.0",
     "libphonenumber-js": "^1.9.48",
     "moment": "^2.29.1",
+    "nest-winston": "^1.6.2",
     "nestjs-typeorm-paginate": "^3.1.3",
     "otp-generator": "^4.0.0",
     "passport": "^0.4.1",
@@ -74,6 +75,8 @@
     "typeorm": "^0.2.30",
     "typeorm-extension": "^1.1.0",
     "typescript": "^4.4.2",
+    "winston-console-transport": "^1.1.9",
+    "winston-elasticsearch": "^0.16.0",
     "ws": "^8.5.0"
   },
   "devDependencies": {
